--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "clinic-search-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "app.js",
+  "scripts": { 
+    "test": "jasmine",
+    "start": "node app.js" },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -13,5 +13,9 @@
     "express": "^4.18.2",
     "helmet": "^6.1.5",
     "request-promise": "^4.2.6"
+  },
+  "devDependencies": {
+    "jasmine": "^4.6.0",
+    "request": "^2.88.2"
   }
 }
